--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="Description"
         content="The Hikers, Dublin based hiking group offering a variation of cheap guided tours around Ireland and much more">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" type="image/ico" href="assets/images/favicon.ico" />
@@ -333,7 +333,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="container">
                 <div class="row">
                     <div class="col-12">
@@ -346,7 +345,7 @@
 
                     <!--CREDIT: modal code for modal images from Bootstrap and customised-->
                     <div class="col-12 col-md-6 col-xl-3">
-                        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#girls-campingModal">
+                        <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#girls-campingModal">
                             <img src="assets/images/gallery/girls-camping.jpg"  width="800" height="463" class="image-style" alt="girls camping">
                         </button>
                         <div class="modal fade" id="girls-campingModal" tabindex="-1"  aria-labelledby="girls-campingModal"  aria-hidden="true">
@@ -361,7 +360,7 @@
                     </div>
 
                     <div class="col-12 col-md-6 col-xl-3">
-                        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#connemara-tourModal">
+                        <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#connemara-tourModal">
                             <img src="assets/images/gallery/connemara-tour.jpg" width="436" height="245" class="image-style" alt="connemara tour">
                         </button>
                         <div class="modal fade" id="connemara-tourModal" tabindex="-1"  aria-labelledby="connemara-tourModal"  aria-hidden="true">
@@ -376,7 +375,7 @@
                     </div>
 
                     <div class="col-12 col-md-6 col-xl-3">
-                        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#the-girl-by-the-streamModal">
+                        <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#the-girl-by-the-streamModal">
                             <img src="assets/images/gallery/the-girl-by-the-stream.jpg" width="780" height="450" class="image-style" alt="the girl by the stream">
                         </button>
                         <div class="modal fade" id="the-girl-by-the-streamModal" tabindex="-1"  aria-labelledby="the-girl-by-the-streamModal"  aria-hidden="true">
@@ -391,7 +390,7 @@
                     </div>
 
                     <div class="col-12 col-md-6 col-xl-3">
-                        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#girls-on-the-beachModal">
+                        <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#girls-on-the-beachModal">
                             <img src="assets/images/gallery/girls-on-the-beach.jpg" width="1504" height="897" class="image-style" alt="girls on the beach">
                         </button>
                         <div class="modal fade" id="girls-on-the-beachModal" tabindex="-1"  aria-labelledby="girls-on-the-beachModal"  aria-hidden="true">
@@ -406,7 +405,7 @@
                     </div>
 
                     <div class="col-12 col-md-6 col-xl-3">
-                        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#our-tour-guideModal">
+                        <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#our-tour-guideModal">
                             <img src="assets/images/gallery/our-tour-guide.jpg" width="675" height="900" class="image-style" alt="our tour guy">
                         </button>
                         <div class="modal fade" id="our-tour-guideModal" tabindex="-1"  aria-labelledby="our-tour-guideModal"  aria-hidden="true">
@@ -421,7 +420,7 @@
                     </div>
                 
                     <div class="col-12 col-md-6 col-xl-3">
-                        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#girls-in-the-forestModal">
+                        <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#girls-in-the-forestModal">
                             <img src="assets/images/gallery/girls-in-the-forest.jpg" width="900" height="1200" class="image-style" alt="girls in the forest">
                         </button>
                         <div class="modal fade" id="girls-in-the-forestModal" tabindex="-1"  aria-labelledby="girls-in-the-forestModal"  aria-hidden="true">
@@ -436,7 +435,7 @@
                     </div>
 
                     <div class="col-12 col-md-6 col-xl-3">
-                        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#irish-sheepModal">
+                        <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#irish-sheepModal">
                             <img src="assets/images/gallery/irish-sheep.jpg" width="600" height="800" class="image-style" alt="irish sheep">
                         </button>
                         <div class="modal fade" id="irish-sheepModal" tabindex="-1"  aria-labelledby="irish-sheepModal"  aria-hidden="true">
@@ -451,7 +450,7 @@
                     </div>
 
                     <div class="col-12 col-md-6 col-xl-3">
-                        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#group-on-the-mountainModal">
+                        <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#group-on-the-mountainModal">
                             <img src="assets/images/gallery/group-on-the-mountain.jpg" width="286" height="371" class="image-style" alt="group on the mountain">
                         </button>
                         <div class="modal fade" id="group-on-the-mountainModal" tabindex="-1"  aria-labelledby="group-on-the-mountainModal"  aria-hidden="true">
@@ -466,7 +465,7 @@
                     </div>
 
                     <div class="col-12 col-md-6 col-xl-3">
-                        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#couple-in-the-carModal">
+                        <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#couple-in-the-carModal">
                             <img src="assets/images/gallery/couple-in-the-car.jpg" width="286" height="214" class="image-style" alt="couple in the car">
                         </button>
                         <div class="modal fade" id="couple-in-the-carModal" tabindex="-1"  aria-labelledby="couple-in-the-carModal"  aria-hidden="true">
@@ -481,7 +480,7 @@
                     </div>
 
                     <div class="col-12 col-md-6 col-xl-3">
-                        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#wicklow-tourModal">
+                        <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#wicklow-tourModal">
                             <img src="assets/images/gallery/wicklow-tour.jpg" width="286" height="214" class="image-style" alt="wicklow tour">
                         </button>
                         <div class="modal fade" id="wicklow-tourModal" tabindex="-1"  aria-labelledby="wicklow-tourModal"  aria-hidden="true">
@@ -496,7 +495,7 @@
                     </div>
 
                     <div class="col-12 col-md-6 col-xl-3">
-                        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#girls-by-the-lakeModal">
+                        <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#girls-by-the-lakeModal">
                             <img src="assets/images/gallery/girls-by-the-lake.jpg" width="286" height="214" class="image-style" alt="girls by the lake">
                         </button>
                         <div class="modal fade" id="girls-by-the-lakeModal" tabindex="-1"  aria-labelledby="girls-by-the-lakeModal"  aria-hidden="true">
@@ -511,7 +510,7 @@
                     </div>
 
                     <div class="col-12 col-md-6 col-xl-3">
-                        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#on-the-mountainModal">
+                        <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#on-the-mountainModal">
                             <img src="assets/images/gallery/on-the-mountain.jpg" width="286" height="214" class="image-style" alt="on the mountain">
                         </button>
                         <div class="modal fade" id="on-the-mountainModal" tabindex="-1"  aria-labelledby="on-the-mountainModal"  aria-hidden="true">
@@ -526,7 +525,7 @@
                     </div>
 
                     <div class="col-12 col-md-6 col-xl-3">
-                        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#lunch-breakModal">
+                        <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#lunch-breakModal">
                             <img src="assets/images/gallery/lunch-break.jpg" width="286" height="170" class="image-style" alt="lunch break">
                         </button>
                         <div class="modal fade" id="lunch-breakModal" tabindex="-1"  aria-labelledby="lunch-breakModal"  aria-hidden="true">
@@ -541,7 +540,7 @@
                     </div>
 
                     <div class="col-12 col-md-6 col-xl-3">
-                        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#girls-beside-the-crossModal">
+                        <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#girls-beside-the-crossModal">
                             <img src="assets/images/gallery/girls-beside-the-cross.jpg" width="900" height="582" class="image-style" alt="girls beside the cross">
                         </button>
                         <div class="modal fade" id="girls-beside-the-crossModal" tabindex="-1"  aria-labelledby="girls-beside-the-crossModal"  aria-hidden="true">
@@ -556,7 +555,7 @@
                     </div>
 
                     <div class="col-12 col-md-6 col-xl-3">
-                        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#view-on-top-of-mountainModal">
+                        <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#view-on-top-of-mountainModal">
                             <img src="assets/images/gallery/view-on-top-of-mountain.jpg" width="900" height="622" class="image-style" alt="view on top of mountain">
                         </button>
                         <div class="modal fade" id="view-on-top-of-mountainModal" tabindex="-1"  aria-labelledby="view-on-top-of-mountainModal"  aria-hidden="true">
@@ -571,7 +570,7 @@
                     </div>
 
                      <div class="col-12 col-md-6 col-xl-3">
-                        <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#girls-by-the-waterfallModal">
+                        <button type="button" class="btn btn-dark" data-toggle="modal" data-bs-target="#girls-by-the-waterfallModal">
                             <img src="assets/images/gallery/girls-by-the-waterfall.jpg" width="1600" height="1200" class="image-style" alt="girls by the waterfall">
                         </button>
                         <div class="modal fade" id="girls-by-the-waterfallModal" tabindex="-1"  aria-labelledby="girls-by-the-waterfallModal"  aria-hidden="true">
@@ -702,8 +701,8 @@
             </li>
         </ul>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
