add wireframes,more content to README.md

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
             <div class="container about-content">
                 <div class="row mt-5 content-item">
-                    <div class="col-12 col-lg-6 d-flex align-items-center">
+                    <div class="col-12 col-md-12 col-lg-6 d-flex align-items-center">
                         <div class="card card-about">
                             <img src="assets/images/about-team.jpg" class="card-img" width="305" height="241" alt="The hikers team">
                             <div class="card-desc">
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-lg-6 content-item-text">
+                    <div class="col-12 col-md-12 col-lg-6 content-item-text">
                         <h4> Welcome to the Ireland hiking of our dreams, We hope yours too</h4>
                         <p>If you love hiking, you are fascinated by wonderful views and magnificent scenery, and
                             looking for adventure
@@ -333,6 +333,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="container">
                 <div class="row">
                     <div class="col-12">
