--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="Description"
         content="The Hikers, Dublin based hiking group offering a variation of cheap guided tours around Ireland and much more">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" type="image/ico" href="assets/images/favicon.ico" />
@@ -28,7 +28,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li data-toggle="collapse" data-target=".navbar-collapse" class="nav-item">
+                        <li data-toggle="collapse" data-target=".navbar-collapse" class="nav-item active">
                             <a class="nav-link" id="navbar-color-home" href="#">Home<span
                                     class="sr-only">(current)</span></a>
                         </li>
@@ -571,8 +571,8 @@
                     </div>
 
                      <div class="col-12 col-md-6 col-xl-3">
-                        <button type="button" class="btn btn-dark" data-toggle="modal" data-bs-target="#girls-by-the-waterfallModal">
-                            <img src="assets/images/gallery/girls-by-the-waterfall.jpg" width="1600" height="1200" class="image-style" alt="girls by the waterfall">
+                        <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#girls-by-the-waterfallModal">
+                            <img src="assets/images/gallery/girls-by-the-waterfall.jpg" width="800" height="600" class="image-style" alt="girls by the waterfall">
                         </button>
                         <div class="modal fade" id="girls-by-the-waterfallModal" tabindex="-1"  aria-labelledby="girls-by-the-waterfallModal"  aria-hidden="true">
                             <div class="modal-dialog" >
@@ -702,8 +702,8 @@
             </li>
         </ul>
     </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 </body>
 </html>
