add final check

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         </div>
     </section>
 
-    <!--section for background image -->
+    <!--div for background image CREDIT: solution for background images for iOS devices from Stackoverflow Nicholas Gooding Rios -->
     <div  class="e-with-fixed-bg">
         <div class="bg-wrap">
             <div class="bg" id="bg-tours"></div>
@@ -323,7 +323,7 @@
         </div>
     </section>
 
-    <!-- div for background image -->
+   <!--div for background image CREDIT: solution for background images for iOS devices from Stackoverflow Nicholas Gooding Rios -->
     <div  class="e-with-fixed-bg">
         <div class="bg-wrap">
             <div id="bg-gallery"></div>
@@ -596,7 +596,7 @@
         </div>
     </section>
 
-    <!-- div for background image with -->
+    <!--div for background image CREDIT: solution for background images for iOS devices from Stackoverflow Nicholas Gooding Rios -->
     <div  class="e-with-fixed-bg">
         <div class="bg-wrap">
             <div id="bg-contact"></div>
