replaced disabled youtube video

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                                     <div class="card video-card-tours">
                                         <div class="video-wrapper">
                                             <!-- CREDIT: Video from youtube.com made by Video © www.absolutevisuals.ie -->
-                                            <iframe src="https://www.youtube.com/embed/CdBXc3zW30Q"
+                                            <iframe src="https://www.youtube.com/embed/QirqMT8BCgU?si=XcuPSCtpxN3NZ8IV"
                                                 title="Glendalough and Wicklow tour" width="727" height="409"
                                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                                 allowfullscreen></iframe>
